<resources>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="ConversationAdapter_n_unread_messages">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    <plurals name="ConversationFragment_delete_selected_messages">
        <item quantity="one">Delete selected message?</item>
        <item quantity="other">Delete selected messages?</item>
    </plurals>
    <plurals name="ConversationFragment_this_will_permanently_delete_all_n_selected_messages">
        <item quantity="one">This will permanently delete the selected message.</item>
        <item quantity="other">This will permanently delete all %1$d selected messages.</item>
    </plurals>
    <plurals name="ConversationFragment_saving_n_media_to_storage_warning">
        <item quantity="one">Saving this media to storage will allow any other apps on your device to access it.\n\nContinue?</item>
        <item quantity="other">Saving all %1$d media to storage will allow any other apps on your device to access them.\n\nContinue?</item>
    </plurals>
    <plurals name="ConversationFragment_error_while_saving_attachments_to_sd_card">
        <item quantity="one">Error while saving attachment to storage!</item>
        <item quantity="other">Error while saving attachments to storage!</item>
    </plurals>
    <plurals name="ConversationFragment_saving_n_attachments">
        <item quantity="one">Saving attachment</item>
        <item quantity="other">Saving %1$d attachments</item>
    </plurals>
    <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
        <item quantity="one">Saving attachment to storage...</item>
        <item quantity="other">Saving %1$d attachments to storage...</item>
    </plurals>
    <plurals name="ConversationListFragment_delete_selected_conversations">
        <item quantity="one">Delete selected conversation?</item>
        <item quantity="other">Delete selected conversations?</item>
    </plurals>
    <plurals name="ConversationListFragment_this_will_permanently_delete_all_n_selected_conversations">
        <item quantity="one">This will permanently delete the selected conversation.</item>
        <item quantity="other">This will permanently delete all %1$d selected conversations.</item>
    </plurals>
    <plurals name="ConversationListFragment_conversations_archived">
        <item quantity="one">Conversation archived</item>
        <item quantity="other">%d conversations archived</item>
    </plurals>
    <plurals name="ConversationListFragment_moved_conversations_to_inbox">
        <item quantity="one">Moved conversation to inbox</item>
        <item quantity="other">Moved %d conversations to inbox</item>
    </plurals>
    <plurals name="InviteActivity_send_sms_to_friends">
        <item quantity="one">SEND SMS TO %d FRIEND</item>
        <item quantity="other">SEND SMS TO %d FRIENDS</item>
    </plurals>
    <plurals name="InviteActivity_send_sms_invites">
        <item quantity="one">Send %d SMS invite?</item>
        <item quantity="other">Send %d SMS invites?</item>
    </plurals>
    <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
        <item quantity="one">Delete selected message?</item>
        <item quantity="other">Delete selected messages?</item>
    </plurals>
    <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
        <item quantity="one">This will permanently delete the selected message.</item>
        <item quantity="other">This will permanently delete all %1$d selected messages.</item>
    </plurals>
    <plurals name="MediaSendActivity_cant_share_more_than_n_items">
        <item quantity="one">You can\'t share more than %d item.</item>
        <item quantity="other">You can\'t share more than %d items.</item>
    </plurals>
    <plurals name="RegistrationActivity_debug_log_hint">
        <item quantity="one">You are now %d step away from submitting a debug log.</item>
        <item quantity="other">You are now %d steps away from submitting a debug log.</item>
    </plurals>
    <plurals name="TransferControlView_n_items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <plurals name="expiration_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="expiration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="expiration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="expiration_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="expiration_weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="identity_others">
        <item quantity="one">%d other</item>
        <item quantity="other">%d others</item>
    </plurals>
    <plurals name="GroupUtil_joined_the_group">
        <item quantity="one">%1$s joined the group.</item>
        <item quantity="other">%1$s joined the group.</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="reminder_header_outdated_build_details">
        <item quantity="one">Your version of OfficeApp will expire in %d day. Tap to update to the most recent version.</item>
        <item quantity="other">Your version of OfficeApp will expire in %d days. Tap to update to the most recent version.</item>
    </plurals>
    <string name="app_name">OfficeApp</string>
    <string name="install_url" translatable="false">https://invite.officeapp.eu</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus">\+%d</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="RegistrationActivity_continue">Continue</string>
    <string name="recipient_preferences__mute_conversation">Mute conversation</string>
    <string name="recipient_preferences__custom_notifications">Custom notifications</string>
    <string name="recipient_preferences__vibrate">Vibrate</string>
    <string name="recipient_preferences__block">Block</string>
    <string name="recipient_preferences__view_safety_number">View safety number</string>
    <string name="recipient_preferences__chat_settings">Chat settings</string>
    <string name="recipient_preferences__privacy">Privacy</string>
    <string name="recipient_preferences__call_settings">Call settings</string>
    <string name="recipient_preferences__ringtone">Ringtone</string>
    <string name="preferences__sms_mms">SMS and MMS</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__chats">Chats and media</string>
    <string name="preferences__linked_devices">Linked devices</string>
    <string name="preferences__theme">Theme</string>
    <string name="preferences__language">Language</string>
    <string name="preferences__signal_messages_and_calls">OfficeApp messages and calls</string>
    <string name="preferences__free_private_messages_and_calls">Free private messages and calls to OfficeApp users</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
    <string name="invitation_activity_welcome">Moderne Kommunikationswelt für jede Firma im sicheren Datenraum</string>
    <string name="invitation_activity_code_desc">Bitte fügen Sie hier Ihren Code ein.</string>
    <string name="invitation_activity_code_label">CODE</string>
    <string name="accept_invite">Einladung annehmen</string>
    <string name="terms_of_service_title">Allgemeine Geschäftsbedingungen</string>
    <string name="terms_of_service_desc">Um fortzufahren, lesen und akzeptieren Sie die AGB.</string>
    <string name="terms_of_service_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lacus velit, mollis vitae pellentesque vel, laoreet ac orci. Fusce consectetur elementum turpis, a aliquet arcu maximus sit amet. Integer consectetur orci a justo lobortis, nec placerat risus posuere. Nunc sed lacus non risus pellentesque tristique. Vestibulum erat dui, semper non hendrerit nec, finibus eu purus. Etiam mollis hendrerit odio. Sed eget metus tellus. Nunc dictum enim nulla, vitae iaculis ligula malesuada a. Nam feugiat pretium tellus, sit amet auctor eros consectetur a. Donec tristique ex felis, et mollis turpis ultricies eu. Duis efficitur congue nisl, a varius ex accumsan eu. Morbi laoreet lectus ac consectetur fringilla. Praesent viverra tincidunt velit, sed efficitur quam vehicula a. Proin vitae diam orci. Duis in nisl dolor. Vivamus lacus elit, commodo non erat at, commodo rutrum est. Quisque vestibulum neque id semper luctus. Fusce posuere scelerisque pharetra. Curabitur at elit eget felis aliquet molestie. Nam tortor mi, tincidunt nec fringilla eget, commodo et metus. Donec nunc dui, pulvinar vitae accumsan quis, suscipit ac sem. Quisque ac interdum nulla, nec lobortis odio. Morbi malesuada, nisl non lobortis ullamcorper, erat elit pretium massa, nec venenatis massa lorem sed nisi. Aliquam eget viverra leo. In id lectus quam. Quisque id consectetur metus. Nunc pulvinar faucibus metus, eu euismod justo vehicula euismod. Praesent quis libero enim. Etiam a elit non mauris consequat ultrices. Aliquam erat volutpat. Sed ex enim, venenatis ut aliquam eu, viverra sed urna.</string>
    <string name="terms_of_service_accept">Ich akzeptiere die AGB.</string>
    <string name="office_app_support">UNTERSTÜTZUNG</string>
    <string name="office_app_need_help">Hilfe erhalten</string>
    <string name="office_app_give_us_opinion">Geben Sie uns Feedback</string>
    <string name="office_app_privacy_policy">DATENSCHUTZ</string>
    <string name="office_app_use_conditions">Nutzungsbedingungen</string>
    <string name="office_app_agb">AGB</string>
    <string name="office_app_delete_account">Account löschen</string>
    <string name="broadcast_new">Broadcast erstellen</string>
    <string name="users_invitation">Users einladen</string>
    <string name="admins_invitation">Admins einladen</string>
    <string name="contact_list">Kontaktliste</string>
</resources>