<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.raapp.messenger.preferences.widgets.ContactPreference android:key="pref_key_number" android:persistent="false"/>

    <PreferenceCategory android:key="notification_settings" android:title="@string/recipient_preferences__chat_settings"
        android:layout="@layout/ra_preference_category">
        <org.raapp.messenger.components.SwitchPreferenceCompat
                android:key="pref_key_recipient_mute"
                android:title="@string/recipient_preferences__mute_conversation"
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:persistent="false" />

        <org.raapp.messenger.components.SwitchPreferenceCompat
            android:key="pref_key_recipient_custom_notifications"
            android:title="@string/recipient_preferences__custom_notifications"
            android:defaultValue="false"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:key="call_settings" android:title="@string/recipient_preferences__call_settings" android:layout="@layout/ra_preference_category">

        <org.raapp.messenger.preferences.widgets.SignalPreference
                android:key="pref_key_recipient_call_ringtone"
                android:title="@string/recipient_preferences__ringtone"
                android:persistent="false"/>

        <org.raapp.messenger.preferences.widgets.SignalListPreference
                android:key="pref_key_recipient_call_vibrate"
                android:title="@string/recipient_preferences__vibrate"
                android:entries="@array/recipient_vibrate_entries"
                android:entryValues="@array/recipient_vibrate_values"
                android:defaultValue="0"
                android:persistent="false"/>

    </PreferenceCategory>


    <PreferenceCategory android:key="privacy_settings" android:title="@string/recipient_preferences__privacy" android:layout="@layout/ra_preference_category">

        <Preference android:key="pref_key_recipient_identity"
                    android:title="@string/recipient_preferences__view_safety_number"
                    android:persistent="false"
                    android:enabled="false"/>

        <Preference android:key="pref_key_recipient_block"
                    android:title="@string/recipient_preferences__block"
                    android:persistent="false"/>

    </PreferenceCategory>

</PreferenceScreen>