<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/ll_admin_plus_menu"
    android:padding="20dp"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/menu_item_new_broadcast"
        style="@style/plus_menu_item">

        <TextView
            android:text="@string/broadcast_new"
            style="@style/ra_text.plus_menu_item_text"></TextView>

        <ImageView
            android:src="@drawable/ic_new_broadcast"
            style="@style/plus_menu_item_icon"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_invite_users"
        style="@style/plus_menu_item">

        <TextView
            android:text="@string/users_invitation"
            style="@style/ra_text.plus_menu_item_text"></TextView>

        <ImageView
            android:src="@drawable/ic_invite_users"
            style="@style/plus_menu_item_icon"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_invite_admin"
        style="@style/plus_menu_item">

        <TextView
            style="@style/ra_text.plus_menu_item_text"
            android:text="@string/admins_invitation"></TextView>

        <ImageView
            android:src="@drawable/ic_invite_admins"
            style="@style/plus_menu_item_icon"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_contact_list"
        style="@style/plus_menu_item">

        <TextView
            android:text="@string/contact_list"
            style="@style/ra_text.plus_menu_item_text"></TextView>

        <ImageView
            style="@style/plus_menu_item_icon"
            android:src="@drawable/ic_contact_lis"></ImageView>

    </LinearLayout>

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/btn_close"
        android:layout_gravity="right"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:src="@drawable/ic_circle_close_blue"></ImageView>

</LinearLayout>