<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ra_background"
    android:orientation="vertical"
    tools:context=".registration.TermOfServiceActivity">


    <LinearLayout
        android:id="@+id/ll_simpleTopbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/terms_of_service_title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/toolbarTitle"></TextView>

        <TextView
            android:text="@string/terms_of_service_desc"
            style="@style/toolbarSubtitle"></TextView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_terms"
        android:layout_above="@+id/ll_actions"
        android:layout_width="match_parent"
        android:layout_below="@+id/ll_simpleTopbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="AGB"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/ra_text_dark"
                android:text="@string/terms_of_service_text"></TextView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_actions"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_accept"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service_accept" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_continue"
            style="@style/ra_button_gradient"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:enabled="false"
            android:text="@string/RegistrationActivity_continue"></Button>
    </LinearLayout>

</RelativeLayout>